--- a/SDK/src/androidSDK/src/main/AndroidManifest.xml
+++ b/SDK/src/androidSDK/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".NativeWeb" />
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".FacebookNativeActivity"/>
+        <activity android:name=".ui.WebLogin"/>
         <activity android:name=".GoogleNativeActivity"></activity>
     </application>
 
