--- a/demo/SocialLogin With UserRegistration/app/build.gradle
+++ b/demo/SocialLogin With UserRegistration/app/build.gradle
@@ -26,13 +26,9 @@ android {
     }
 
 
-
-
-
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "4g"
     }
 }
 
@@ -41,6 +37,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.android.support:multidex:1.0.0'
     compile project(':androidSDK')
 }
 
