--- a/demo/SocialLogin With UserRegistration/app/src/main/AndroidManifest.xml
+++ b/demo/SocialLogin With UserRegistration/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.loginradius.registrationsdk.multidexclass"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
