--- a/SDK/src/androidSDK/build.gradle
+++ b/SDK/src/androidSDK/build.gradle
@@ -1,19 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
-   useLibrary  'org.apache.http.legacy'
-
-
-
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+    useLibrary  'org.apache.http.legacy'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
-
-
-
+        targetSdkVersion 25
     }
 
     buildTypes {
@@ -29,9 +23,7 @@ android {
 }
 
 dependencies {
-    compile('com.facebook.android:facebook-android-sdk:4.+') {
-        exclude module: 'support-v4'
-    }
+    compile 'com.facebook.android:facebook-android-sdk:4.14.1'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile files('libs/android-async-http-1.4.8.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
