--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -2,19 +2,24 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.1'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.0'
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
-        versionName "4.1.0"
+        versionName "4.2.0"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            useProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -25,19 +30,25 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+    }
+
 }
 
 
 
 dependencies {
-    compile 'com.facebook.android:facebook-android-sdk:4.14.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.google.android.gms:play-services:11.0.4'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.vk:androidsdk:1.6.7'
+    implementation 'com.facebook.android:facebook-android-sdk:4.36.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.vk:androidsdk:1.6.7'
 }
 
 
