--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.0'
 
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "4.3.0"
+        versionName "4.4.0-beta"
         multiDexEnabled true
 
     }
@@ -43,7 +42,7 @@ android {
 
 
 dependencies {
-    implementation 'com.facebook.android:facebook-android-sdk:4.36.1'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
