--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -26,10 +26,7 @@ android {
 
 dependencies {
     implementation project(':androidsdk')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:multidex:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
