--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "4.5.1"
+        versionName "4.6.0"
         multiDexEnabled true
 
     }
@@ -29,7 +29,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
-  buildscript {
+    buildscript {
         repositories {
             google()
             maven { url 'https://maven.google.com' }
@@ -40,17 +40,14 @@ android {
 }
 
 
-
 dependencies {
-    implementation 'com.facebook.android:facebook-login:[5,6)'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.vk:androidsdk:1.6.7'
+    api 'com.facebook.android:facebook-login:[5,6)'
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.google.code.gson:gson:2.8.5'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api 'com.google.android.gms:play-services-auth:16.0.0'
+    api 'com.vk:androidsdk:1.6.7'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
+    api 'com.android.support:appcompat-v7:28.0.0'
 }
-
-
-
