--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     implementation project(':androidsdk')
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:multidex:1.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
