--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
-        versionName "4.8.0"
+        versionName "4.9.0"
         multiDexEnabled true
 
     }
@@ -41,7 +41,7 @@ android {
 
 
 dependencies {
-    api 'com.facebook.android:facebook-login:[5,6)'
+    api 'com.facebook.android:facebook-login:11.2.0'
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.google.code.gson:gson:2.8.5'
     api 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -49,5 +49,5 @@ dependencies {
     api 'com.google.android.gms:play-services-auth:16.0.0'
     api 'com.vk:androidsdk:1.6.7'
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
 }
