--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -3,39 +3,31 @@ on:
   push:
     branches: [ master ]
     
+    
+    
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Import GPG key
-      id: import_gpg
-      uses: crazy-max/ghaction-import-gpg@v4
-      with:
+      - uses: actions/checkout@v2
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v4
+        with:
           gpg_private_key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
-    - name: Build with Maven
-      run: mvn -B verify --file sdk/androidsdk/build.gradle
-      
-   
-    - name: Set up Apache Maven Central
-      uses: actions/setup-java@v1
-      with: # running setup-java again overwrites the settings.xml
-        java-version: 1.8
-        distribution: 'adopt'
-        server-id: ossrh
-        server-username: MAVEN_USERNAME # env variable for username in deploy
-        server-password:  MAVEN_CENTRAL_TOKEN # env variable for token in deploy
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Publish package
+        run: gradle publish
+        working-directory: sdk/androidsdk/build.gradle
+        env:
+         MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
+         MAVEN_CENTRAL_TOKEN: ${{secrets.MAVEN_PASSWORD}}
 
-
-    - name: Publish to Apache Maven Central
-      run: mvn --batch-mode deploy --file sdk/androidsdk/build.gradle
-      env:
-        MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
-        MAVEN_CENTRAL_TOKEN: ${{secrets.MAVEN_PASSWORD}}
+  
