--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Publish package
         run: gradle publish
-        working-directory: sdk/androidsdk/build.gradle
+        working-directory: sdk/androidsdk
         env:
          MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
          MAVEN_CENTRAL_TOKEN: ${{secrets.MAVEN_PASSWORD}}
