--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -33,6 +33,7 @@ android {
         repositories {
             google()
             maven { url 'https://maven.google.com' }
+            mavenCentral()
             jcenter()
         }
     }
