--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -36,6 +36,9 @@ android {
             maven { url 'https://maven.google.com' }
             jcenter()
         }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.1'
+    }
     }
 
 }
