--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -15,15 +15,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
+ 
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
       - name: Publish package
-        run: gradle publish
+        run: gradle -Pversion= 4.9.0 build publish
         working-directory: sdk/androidsdk
         env:
          MAVEN_USERNAME: ${{secrets.MAVEN_USERNAME}}
