--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     api 'com.vk:androidsdk:1.6.7'
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.4.0'
     api 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.android.tools.build:gradle:2.3.0'
+
 }
 
