--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -39,12 +39,14 @@ android {
             maven { url 'https://maven.google.com' }
             jcenter()
         }
-
+        dependencies {
+            classpath 'com.android.tools.build:gradle:4.2.0'
+        }
     }
 
 }
 publishing {
-
+  
     repositories {
         maven {
             name = "OSSRH"
@@ -56,6 +58,7 @@ publishing {
         }
 
     }
+
 }
 
 dependencies {
