--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -1,9 +1,5 @@
-
-plugins {
-    id 'com.android.library'
-    id 'maven-publish'
-}
-
+apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 android {
     compileSdkVersion 29
 
@@ -45,21 +41,77 @@ android {
     }
 
 }
-publishing {
-  
-    repositories {
-        maven {
-            name = "OSSRH"
-            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            credentials {
-                username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    from android.sourceSets.main.java.srcDirs
+}
+
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.loginradius.android'
+                artifactId = 'androidsdk'
+                version = '4.9.0'
+                artifact(bundleReleaseAar)
+
+            }
+            mavenJava(MavenPublication) {
+                pom {
+                    name ='Android SDK'
+                    packaging ='aar'
+                    description= 'LoginRadius Android SDK'
+                    url= 'https://github.com/LoginRadius/android-sdk'
+
+                    scm {
+                        url= 'scm:git@github.com/LoginRadius/android-sdk.git'
+                        connection= 'scm:git@github.com/LoginRadius/android-sdk.git'
+                        developerConnection ='scm:github.com/LoginRadius/android-sdk.git'
+                    }
+
+                    licenses {
+                        license {
+                            name ='MIT License'
+                            url ='http://www.opensource.org/licenses/mit-license.php'
+                            distribution= 'repo'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id ='support'
+                            name ='LoginRadius Support'
+                            email ='support@loginradius.com'
+                            organization ='LoginRadius'
+                            organizationUrl ='https://www.loginradius.com'
+                        }
+                    }
+                }
             }
         }
+        repositories {
+            maven {
+                name = "OSSRH"
+                url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                credentials {
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
+                }
+            }
 
+        }
     }
 
 }
+
+
+
 
 dependencies {
     api 'com.facebook.android:facebook-login:11.2.0'
