--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -1,5 +1,16 @@
 apply plugin: 'com.android.library'
 
+ext {
+    PUBLISH_GROUP_ID = "com.loginradius.androidsdk"
+    PUBLISH_ARTIFACT_ID = 'androidsdk'
+    PUBLISH_VERSION = "4.9.2"
+}
+
+if(project.file("${rootDir}/scripts/publish-module.gradle").exists()){
+    apply from: "${rootDir}/scripts/publish-module.gradle"
+}
+
+
 android {
     compileSdkVersion 29
 
@@ -7,7 +18,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
-        versionName "4.9.1"
+        versionName "4.9.2"
         multiDexEnabled true
 
     }
